--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-package-name",
+  "name": "zealthy-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "zealthy-backend": "file:"
   }
 }
